--- a/confusion/package.json
+++ b/confusion/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "bootstrap-social": "^5.1.1",
+    "fontawesome": "^5.6.3",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-popper": "^2.2.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "reactstrap": "^8.4.1"
   },
